--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,13 @@
 body {
     font-family: sans-serif;
     margin: 0;
+    max-width: 1300px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    box-shadow: 0px -5px 10px rgb(113, 131, 235);
 }
 input[type="submit"] { 
     cursor: pointer;
@@ -9,7 +16,7 @@ input[type="submit"] {
     font-size: 18px;
     min-height: 3rem;
 }
-.info, .world-output .main-title {
+.info, .world-output .main-title, h1 {
     color: rgb(95, 110, 199);
 }
 .info {
@@ -23,7 +30,7 @@ input[type="submit"] {
 }
 .world-output, .event-output {
     overflow: auto;
-    max-height: calc(100vh - 3rem); /* full height minus button height */
+    max-height: 75vh;
 }
 /* How wide is the world output sidebar? */
 .world-output > div {
